compiler/testData/diagnostics/tests/modifiers/primaryConstructorMissingBrackets.kt
// RUN_PIPELINE_TILL: SOURCE
class A private <!MISSING_CONSTRUCTOR_BRACKETS!>constructor<!><!SYNTAX!><!> {
}
